--- a/CRM-Update-Final-Project/src/index.html
+++ b/CRM-Update-Final-Project/src/index.html
@@ -1,13 +1,69 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>CRMUpdateFinalProject</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta charset="utf-8"/>
+    <meta
+            content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+            name="viewport"
+    />
+    <title>CRMUpdateFinalProject</title>
+    <base href="/">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com" rel="preconnect"/>
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
+    <link
+            href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+            rel="stylesheet"
+    />
+
+    <!-- Favicon -->
+    <link href="assets/img/favicon/favicon.ico" rel="icon" type="image/x-icon"/>
+    <!-- Icons. Uncomment required icon fonts -->
+    <link href="assets/vendor/fonts/boxicons.css" rel="stylesheet"/>
+
+    <!-- Core CSS -->
+    <link class="template-customizer-core-css" href="assets/vendor/css/core.css" rel="stylesheet"/>
+    <link class="template-customizer-theme-css" href="assets/vendor/css/theme-default.css" rel="stylesheet"/>
+    <link href="assets/css/demo.css" rel="stylesheet"/>
+
+    <!-- Vendors CSS -->
+    <link href="assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" rel="stylesheet"/>
+
+    <!-- Page CSS -->
+    <!-- Page -->
+    <link href="../assets/vendor/css/pages/page-auth.css" rel="stylesheet"/>
+    <link href="../assets/vendor/css/pages/page-misc.css" rel="stylesheet"/>
+    <!-- Helpers -->
+    <script src="assets/vendor/js/helpers.js"></script>
+
+    <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
+    <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
+    <script src="assets/js/config.js"></script>
 </head>
 <body>
-  <app-root></app-root>
+<app-main></app-main>
+<!-- Core JS -->
+<!-- build:js assets/vendor/js/core.js -->
+<script src="assets/vendor/libs/jquery/jquery.js"></script>
+<script src="assets/vendor/libs/popper/popper.js"></script>
+<script src="assets/vendor/js/bootstrap.js"></script>
+<script src="assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+
+<script src="assets/vendor/js/menu.js"></script>
+<!-- endbuild -->
+
+<!-- Vendors JS -->
+
+<!-- Main JS -->
+<script src="assets/js/main.js"></script>
+
+<!-- Page JS -->
+
+<script src="assets/js/form-basic-inputs.js"></script>
+
+<!-- Place this tag in your head or just before your close body tag. -->
+<script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 </html>
