--- a/CRM-Update-Final-Project-FE/src/index.html
+++ b/CRM-Update-Final-Project-FE/src/index.html
@@ -32,6 +32,7 @@
   <!-- Page CSS -->
   <!-- Page -->
   <link rel="stylesheet" href="assets/vendor/css/pages/page-auth.css" />
+  <link rel="stylesheet" href="../assets/vendor/css/pages/page-misc.css" />
   <!-- Helpers -->
   <script src="assets/vendor/js/helpers.js"></script>
 
